@@ -491,26 +491,6 @@ name|serde2
 operator|.
 name|objectinspector
 operator|.
-name|ObjectInspectorUtils
-operator|.
-name|ObjectInspectorCopyOption
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|objectinspector
-operator|.
 name|StructField
 import|;
 end_import
@@ -548,6 +528,26 @@ operator|.
 name|objectinspector
 operator|.
 name|SubStructObjectInspector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|objectinspector
+operator|.
+name|ObjectInspectorUtils
+operator|.
+name|ObjectInspectorCopyOption
 import|;
 end_import
 
@@ -802,10 +802,6 @@ name|RecordWriter
 index|[]
 name|outWriters
 decl_stmt|;
-name|int
-name|timeOut
-decl_stmt|;
-comment|// JT timeout in msec.
 specifier|public
 name|FSPaths
 parameter_list|()
@@ -849,22 +845,6 @@ name|RecordWriter
 index|[
 name|numFiles
 index|]
-expr_stmt|;
-comment|// Timeout is chosen to make sure that even if one iteration takes more than
-comment|// half of the script.timeout but less than script.timeout, we will still
-comment|// be able to report progress.
-name|timeOut
-operator|=
-name|hconf
-operator|.
-name|getInt
-argument_list|(
-literal|"mapred.healthChecker.script.timeout"
-argument_list|,
-literal|600000
-argument_list|)
-operator|/
-literal|2
 expr_stmt|;
 block|}
 comment|/**      * Append a subdirectory to the tmp path.      * @param dp subdirecgtory name      */
@@ -1027,49 +1007,6 @@ return|return
 name|outWriters
 return|;
 block|}
-comment|/**      * Report status to JT so that JT won't kill this task if closing takes too long      * due to too many files to close and the NN is overloaded.      * @param lastUpdateTime the time (msec) that progress update happened.      * @return true if a new progress update is reported, false otherwise.      */
-specifier|private
-name|boolean
-name|updateProgress
-parameter_list|(
-name|long
-name|lastUpdateTime
-parameter_list|)
-block|{
-if|if
-condition|(
-name|reporter
-operator|!=
-literal|null
-operator|&&
-operator|(
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-operator|-
-name|lastUpdateTime
-operator|)
-operator|>
-name|timeOut
-condition|)
-block|{
-name|reporter
-operator|.
-name|progress
-argument_list|()
-expr_stmt|;
-return|return
-literal|true
-return|;
-block|}
-else|else
-block|{
-return|return
-literal|false
-return|;
-block|}
-block|}
 specifier|public
 name|void
 name|closeWriters
@@ -1080,14 +1017,6 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
-name|long
-name|lastProgressReport
-init|=
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -1127,22 +1056,9 @@ argument_list|(
 name|abort
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
 name|updateProgress
-argument_list|(
-name|lastProgressReport
-argument_list|)
-condition|)
-block|{
-name|lastProgressReport
-operator|=
-name|System
-operator|.
-name|currentTimeMillis
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1171,14 +1087,6 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
-name|long
-name|lastProgressReport
-init|=
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -1230,22 +1138,9 @@ index|]
 argument_list|)
 throw|;
 block|}
-if|if
-condition|(
 name|updateProgress
-argument_list|(
-name|lastProgressReport
-argument_list|)
-condition|)
-block|{
-name|lastProgressReport
-operator|=
-name|System
-operator|.
-name|currentTimeMillis
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1286,14 +1181,6 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
-name|long
-name|lastProgressReport
-init|=
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -1351,22 +1238,9 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
 name|updateProgress
-argument_list|(
-name|lastProgressReport
-argument_list|)
-condition|)
-block|{
-name|lastProgressReport
-operator|=
-name|System
-operator|.
-name|currentTimeMillis
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1520,6 +1394,22 @@ specifier|private
 specifier|transient
 name|SubStructObjectInspector
 name|subSetOI
+decl_stmt|;
+specifier|private
+specifier|transient
+name|int
+name|timeOut
+decl_stmt|;
+comment|// JT timeout in msec.
+specifier|private
+specifier|transient
+name|long
+name|lastProgressReport
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
 decl_stmt|;
 comment|/**    * TableIdEnum.    *    */
 specifier|public
@@ -1759,6 +1649,22 @@ name|serializer
 operator|.
 name|getSerializedClass
 argument_list|()
+expr_stmt|;
+comment|// Timeout is chosen to make sure that even if one iteration takes more than
+comment|// half of the script.timeout but less than script.timeout, we will still
+comment|// be able to report progress.
+name|timeOut
+operator|=
+name|hconf
+operator|.
+name|getInt
+argument_list|(
+literal|"mapred.healthChecker.script.timeout"
+argument_list|,
+literal|600000
+argument_list|)
+operator|/
+literal|2
 expr_stmt|;
 if|if
 condition|(
@@ -2864,6 +2770,53 @@ operator|=
 literal|true
 expr_stmt|;
 block|}
+comment|/**    * Report status to JT so that JT won't kill this task if closing takes too long    * due to too many files to close and the NN is overloaded.    * @param lastUpdateTime the time (msec) that progress update happened.    * @return true if a new progress update is reported, false otherwise.    */
+specifier|private
+name|boolean
+name|updateProgress
+parameter_list|()
+block|{
+if|if
+condition|(
+name|reporter
+operator|!=
+literal|null
+operator|&&
+operator|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|-
+name|lastProgressReport
+operator|)
+operator|>
+name|timeOut
+condition|)
+block|{
+name|reporter
+operator|.
+name|progress
+argument_list|()
+expr_stmt|;
+name|lastProgressReport
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
 name|Writable
 name|recordValue
 decl_stmt|;
@@ -3552,6 +3505,13 @@ name|fsp
 argument_list|)
 expr_stmt|;
 block|}
+name|lastProgressReport
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 operator|!
